# castru

./: .gitignore  Cargo.toml  GEMINI.md  README.md  api_check  build.rs  coverage_baseline.txt
.specify/memory/: constitution.md
benches/: transcode_throughput.rs
examples/: discover.rs  full_lifecycle.rs  full_media.rs  launch_app.rs  media_control.rs  platform_control.rs
specs/001-castv2-protocol/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-enhanced-cast-features/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-platform-and-media/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-castnow-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-remote-transcoding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-castnow-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-visual-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-tui-enhancements/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/009-projector-animation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-tune-buffering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-add-torrent-support/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src/: app.rs  client.rs  codec.rs  config.rs  discovery.rs  error.rs  lib.rs  main.rs  server.rs  tls.rs  transcode.rs
tests/: connection.rs  integration_cast.rs
(+133 files in other folders)
