[package]
name = "castru"
version = "0.1.0"
edition = "2021"
description = "A minimalist Google Cast (CastV2) protocol implementation in Rust."
license = "MIT"
repository = "https://github.com/echirui/castru"
keywords = ["cast", "chromecast", "google-cast", "media", "protocol"]
categories = ["network-programming", "multimedia"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
prost = "0.12"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
mdns-sd = "0.10"
crossterm = "0.27"
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
uuid = { version = "1.19.0", features = ["v4"] }
bstr = "1.12.1"
simplelog = "0.12"

[dependencies.tokio-rustls]
version = "0.24"

[dependencies.rustls]
version = "0.21"
features = ["dangerous_configuration"]

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3.0"
